testsuite/tests/typing-recmod/t12bad.compilers.reference
File "t12bad.ml", line 11, characters 4-101:
11 | ....sig
   |       class ['a] c : 'a -> object
   |         method map : ('a -> 'b) -> 'b M.c
   |       end
15 |     end
Error: In the definition of M.c, type 'b M.c should be 'a M.c
